# Supports-Bot

./: Dockerfile  README.md  contributing.md  docker-compose.yaml  main.py  prestart.sh  pyproject.toml  readme.md  requirements.txt  run_bot.sh  template.env
bot/: main.py
bot/cogs/common/: cog.py
bot/cogs/guild_settings/: cog.py  embeds.py
bot/cogs/help/: cog.py  embeds.py  enums.py  views.py
bot/cogs/verify/: cog.py  embeds.py  modals.py  views.py
bot/core/: base_embeds.py  configuration.py  embeds.py  enums.py
bot/core/models/: __init__.py  guild_settings.py  mixins.py  support_feedback.py  user.py
bot/docs/: env_configuration.md  install.md  project_configuration.md  project_structure.md  reference.md
bot/migrations/: env.py
bot/migrations/versions/: 5c1d267f8942_create_tables.py  9a15a69af279_create_supports_feedbacks.py  b4572c292bd2_fix.py  d5d62fc3bfd5_added_unverified_role_id.py  d78d73ff2cb0_create_tables.py
bot/services/guilds_settings/: crud.py  service.py
bot/services/supports_feedbacks/: embeds.py  service.py
bot/services/users/: service.py
