[project]
name = "supports-bot"
version = "0.1.0"
description = ""
authors = [
    {name = "theaihopgg",email = "theaihopgg@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiosqlite (>=0.21.0,<0.22.0)",
    "alembic (>=1.16.4,<2.0.0)",
    "disnake (>=2.10.1,<3.0.0)",
    "python-dotenv (>=1.1.1,<2.0.0)",
    "sqlalchemy (>=2.0.43,<3.0.0)"
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
